[package]
name = "cch23-grindarius"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shuttle-axum = { version = "0.34", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.34"
tokio = "1"
tracing = "0.1"
